--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
-        <activity android:name=".MainActivity" />
+        <activity android:name=".activities.MainActivity" />
         <!--
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,7 +21,7 @@
         -->
         <!-- </activity> -->
         <activity
-            android:name=".BasicActivity"
+            android:name=".activities.BasicActivity"
             android:label="@string/title_activity_basic">
             <!--<intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -29,7 +29,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>-->
         </activity>
-        <activity android:name=".BottomAppBarActivity">
+        <activity android:name=".activities.BottomAppBarActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
