--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,9 +40,11 @@ dependencies {
     implementation 'com.crashlytics.sdk.android:crashlytics:2.9.6'
     //implementation 'com.google.firebase:firebase-perf:16.2.0'
     implementation 'com.google.firebase:firebase-messaging:17.3.4'
+    // Add the In-App Messaging dependency:
+    implementation 'com.google.firebase:firebase-inappmessaging-display:17.0.4'
 
     //Anko kotlin
-    implementation 'org.jetbrains.anko:anko:0.10.4'
+    implementation 'org.jetbrains.anko:anko:0.10.7'
 
     // Testing
     testImplementation 'junit:junit:4.12'
