--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url "https://jitpack.io" }
         // Add repository
         maven {
             url 'https://maven.google.com/'
